@@ -1,3 +1,8 @@
+2004-03-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-powerpc/tlsexe.r: Update for changed sym type.
+	* ld-powerpc/tlsexetoc.r: Likewise.
+
 2004-03-22  Hans-Peter Nilsson  <hp@axis.com>
 
 	* ld-cris/dsofnf.s, ld-cris/dsofnf2.s, ld-cris/gotplt1.d,
